-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3, 6.6.0
-
-
70404a277 (dev), 55a5cc4c9 (6.6), 14c53291b (tqtc/lts-6.5)
The popup menu of a QToolButton (setPopupMode(QToolButton::MenuButtonPopup)) is shown on the wrong screen in multiple screen setup.
Everything works fine as long as the menu fits entirely on the smaller screen. Otherwise it isn't always displayed near the button but on the other display.
Attached example reproduces this.
Run the example and then bring it on the second screen and then hit menu button.
There is little difference in Qt6 and Qt5
Qt 6)
- before: the menu is always displayed on the main display even if the window is moved to the other one
- aboutToShow: the menu is allways displayed on the display where the window was while pressing the button for the first time
Qt 5)
- before: the menu is always displayed on the main display even if the window is moved to the other one
- aboutToShow: if the window is not on the main display while pressing the button for the first time the menu appears near the button. The second time appears on the main display. Otherwise it's always on the main display.
- is duplicated by
-
QTBUG-129993 QToolButton Popup Menu Shows in Secondary Monitor
-
- Closed
-
- relates to
-
QTBUG-84462 QToolButton popup menu only shows on primary screen
-
- Closed
-
| For Gerrit Dashboard: QTBUG-118695 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 516634,5 | Prevent oversized QToolButton menu from moving to primary screen | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 516837,2 | Prevent oversized QToolButton menu from moving to primary screen | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 516964,2 | Prevent oversized QToolButton menu from moving to primary screen | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |